DTS-45928: remove unused imports